Fix project spacing and issues

--- a/assets/css/newStyle.css
+++ b/assets/css/newStyle.css
@@ -56,13 +56,13 @@ section {
     border-radius: 15px;
 }
 
-.projects img {
+.project img {
     filter: none;
     transition: 0.5s;
     border-radius: 15px;
 }
 
-.projects div:hover img{
+.project:hover img{
     filter: blur(4px);
     transition: 0.5s;
 }
@@ -114,6 +114,10 @@ section {
 
 .card {
     padding: 0;
+}
+
+.center {
+    justify-content: center;
 }
 
 /* contact me */
